# tldrpp

./: .gitignore  FAQ.md  INSTALL.md  Makefile  README.md  go.mod  pyproject.toml
cmd/tldrpp/: main.go
internal/app/: app.go
internal/config/: config.go  config_test.go
internal/plugin/: plugin.go
internal/tui/: tui.go
internal/types/: types.go  types_test.go
scripts/: build.sh  install.sh
tests/: __init__.py  test_app.py  test_cache.py  test_config.py
tldrpp/: __init__.py  app.py  cache.py  cli.py  config.py  plugin.py  tui.py
